# soc

./: README.md  _config.yml  index.md
docs/: ml-algol.md  new-old-algol.md
docs/articles/: arm64-x86_64-on-aws.md  articles.md  cpp-and-other-lang.md  cpp-lint-01.md  fdd.md  positive-cpp.md  public-cloud-usage.md
docs/articles/code/positivecpp/: CMakeLists.txt  README.md  docker-compose.yml  jsonferry.cpp
docs/new-old-algol/: logistic-regression.md  new-old-algol.md
docs/new-old-algol/code/: logistic_regression.cpp
